--- a/index.html
+++ b/index.html
@@ -11,17 +11,53 @@
 
 <body>
 
-    <header>
-
+    <header class="header">
+        <a href="" class="header-logo">
+            <img class="header-logo-image"
+            src="./images/logo.png"
+            alt="logo KROPP"
+            width: 135px;
+            height: 25px;>
+        </a>
+        <nav class="header-menu">
+            <ul class="header-menu-list">
+                <li class="header-menu-item">
+                    <a href="/" class="header-menu-link is-current">Home</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="/" class="header-menu-link">Pages</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="/" class="header-menu-link">Portfolio</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="/" class="header-menu-link">Blog</a>
+                </li>
+                <li class="header-menu-item">
+                    <a href="/" class="header-menu-link">Shop</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="header-actions">
+            <button 
+            class="header-book-button button"
+            type="button">
+                Book now
+            </button>
+        <button 
+        class="header-burger-button"
+        type="button">
+        <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M0.5 1H22.5" stroke="white" stroke-dasharray="22 22"/>
+            <path d="M0.5 1H22.5" stroke="white" stroke-dasharray="22 22"/>
+            <path d="M0.5 6H22.5" stroke="white" stroke-dasharray="22 22"/>
+            <path d="M0.5 6H22.5" stroke="white" stroke-dasharray="22 22"/>
+            <path d="M0.5 11H22.5" stroke="white" stroke-dasharray="22 22"/>
+            <path d="M0.5 11H22.5" stroke="white" stroke-dasharray="22 22"/>
+            </svg>
+        </button>
+        </div>
     </header>
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
 
 </body>
 
